tests/baselines/reference/cloduleTest2.errors.txt
==== tests/cases/compiler/cloduleTest2.ts (12 errors) ====
    module T1 {
        module m3d { export var y = 2; }
        declare class m3d { constructor(foo); foo(): void ; static bar(); }
        var r = new m3d(); // error
                    ~~~
!!! error TS2081: Supplied parameters do not match any signature of call target.
                    ~~~
!!! error TS2085: Could not select overload for 'new' expression.
    }
    
    module T2 {
        declare class m3d { constructor(foo); foo(): void; static bar(); }
        module m3d { export var y = 2; }
        var r = new m3d(); // error
                    ~~~
!!! error TS2081: Supplied parameters do not match any signature of call target.
                    ~~~
!!! error TS2085: Could not select overload for 'new' expression.
    }
    
    module T3 {
        module m3d { export var y = 2; }
        declare class m3d { foo(): void; static bar(); }
        var r = new m3d();
        r.foo();
        r.bar(); // error
          ~~~
!!! error TS2094: The property 'bar' does not exist on value of type 'm3d'.
        r.y; // error
          ~
!!! error TS2094: The property 'y' does not exist on value of type 'm3d'.
    }
    
    module T4 {
        declare class m3d { foo(): void; static bar(); }
        module m3d { export var y = 2; }
        var r = new m3d();
        r.foo();
        r.bar(); // error
          ~~~
!!! error TS2094: The property 'bar' does not exist on value of type 'm3d'.
        r.y; // error
          ~
!!! error TS2094: The property 'y' does not exist on value of type 'm3d'.
    }
    
    module m3d { export var y = 2; }
    declare class m3d { constructor(foo); foo(): void; static bar(); }
    var r = new m3d(); // error
                ~~~
!!! error TS2081: Supplied parameters do not match any signature of call target.
                ~~~
!!! error TS2085: Could not select overload for 'new' expression.
    
    declare class m4d extends m3d { }
    var r2 = new m4d(); // error
                 ~~~
!!! error TS2081: Supplied parameters do not match any signature of call target.
                 ~~~
!!! error TS2085: Could not select overload for 'new' expression.